@@ -258,7 +258,13 @@ string FindMountPointForDevice(const char *devnode)
                if(TokSplitString(' ', buf, out, 10))
                {
                   fclose(f);
-                  return string(out[1]);
+                  // unescape \040 and return the path
+                  size_t pos;
+                  string mount_point = out[1];
+                  static const char *needle = "\\040";
+                  while ((pos = mount_point.find(needle)) != string::npos)
+                     mount_point.replace(pos, strlen(needle), " ");
+                  return mount_point;
                }
             }
          }
