@@ -4,6 +4,8 @@ apt (0.8.15.2) unstable; urgency=high
     code (LP: #784473)
   * cmdline/apt-get.cc:
     - fix missing download progress in apt-get download
+  * apt-pkg/contrib/cdromutl.cc:
+    - fix escape problem when looking for the mounted devices
 
  -- Michael Vogt <mvo@debian.org>  Tue, 12 Jul 2011 11:54:47 +0200
 
